# solsearch

./: Cargo.toml  Readme.md
.github/workflows/: rust.yml
src/: dsl.rs  engine.rs  generalized_engine.rs  main.rs
test/examples/: BadCodingStyle.sol  LowLevelCall.yaml  NonPureCalls.yaml  StateVariableLint.yaml  default.yaml  raw_call.json  raw_call.sol
