[package]
name = "solsearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
eyre = "0.6.8"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
solidity = { git = "https://github.com/hrkrshnn/solidity-rs.git", branch = "lib", package = "solidity" }
eth-lang-utils = { git = "https://github.com/hrkrshnn/solidity-rs.git", branch = "lib", package = "eth-lang-utils" }
